--- a/pppppp/View/UserData/FriendListView/FriendListView.storyboard
+++ b/pppppp/View/UserData/FriendListView/FriendListView.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="367-fm-CLh">
-                                <rect key="frame" x="0.0" y="87" width="390" height="757"/>
+                                <rect key="frame" x="0.0" y="47" width="390" height="797"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Mg5-nn-cm7">
                                     <size key="itemSize" width="128" height="128"/>
@@ -39,21 +40,27 @@
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" red="0.070588235289999995" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" name="mainColor"/>
                         <constraints>
                             <constraint firstItem="367-fm-CLh" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="1Cn-uT-MLO"/>
-                            <constraint firstItem="367-fm-CLh" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="40" id="Eot-7P-iFc"/>
+                            <constraint firstItem="367-fm-CLh" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Eot-7P-iFc"/>
                             <constraint firstItem="367-fm-CLh" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="ehl-VS-jzE"/>
                             <constraint firstAttribute="bottom" secondItem="367-fm-CLh" secondAttribute="bottom" id="wQA-fZ-psh"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="AJw-od-LIe"/>
                     <connections>
                         <outlet property="friendcollectionView" destination="367-fm-CLh" id="vUN-lv-iPc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75.384615384615387" y="-2.1327014218009479"/>
+            <point key="canvasLocation" x="1004.6153846153845" y="-2.1327014218009479"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="mainColor">
+            <color red="0.071000002324581146" green="0.0" blue="0.29800000786781311" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
