--- a/pppppp/View/AuthView/SignInWithEmail/ResetPasswordView/ResetPasswordView.storyboard
+++ b/pppppp/View/AuthView/SignInWithEmail/ResetPasswordView/ResetPasswordView.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -45,7 +46,7 @@
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="5dY-Al-by7"/>
-                        <color key="backgroundColor" red="0.074509803920000006" green="0.0" blue="0.2985896468" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" name="mainColor"/>
                         <constraints>
                             <constraint firstItem="rdX-0h-hJ1" firstAttribute="centerY" secondItem="tXh-6h-Yed" secondAttribute="centerY" id="5gc-Oc-Iia"/>
                             <constraint firstItem="6p8-Fq-Qnm" firstAttribute="centerX" secondItem="tXh-6h-Yed" secondAttribute="centerX" id="6xT-iV-6tH"/>
@@ -69,4 +70,9 @@
             <point key="canvasLocation" x="-101" y="88"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="mainColor">
+            <color red="0.071000002324581146" green="0.0" blue="0.29800000786781311" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
