--- a/pppppp/View/CreatePointView/RecordExerciseView/RecordExerciseView.storyboard
+++ b/pppppp/View/CreatePointView/RecordExerciseView/RecordExerciseView.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -68,7 +69,7 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="SVz-Sw-HEj"/>
-                        <color key="backgroundColor" red="0.2666666667" green="0.2470588235" blue="0.63921568630000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" name="purple00"/>
                         <constraints>
                             <constraint firstItem="NoX-SH-DcP" firstAttribute="leading" secondItem="SVz-Sw-HEj" secondAttribute="leading" constant="24" id="4af-8U-MLi"/>
                             <constraint firstItem="bbS-71-7GY" firstAttribute="top" secondItem="SVz-Sw-HEj" secondAttribute="top" constant="24" id="7qN-QA-Ir5"/>
@@ -93,4 +94,9 @@
             <point key="canvasLocation" x="2073.913043478261" y="428.57142857142856"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="purple00">
+            <color red="0.26666666666666666" green="0.24705882352941178" blue="0.63921568627450975" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
