--- a/pppppp/View/CreatePointView/RecordWeightView/RecordWeightView.storyboard
+++ b/pppppp/View/CreatePointView/RecordWeightView/RecordWeightView.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -61,7 +62,7 @@
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" red="0.2666666667" green="0.2470588235" blue="0.63921568630000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" name="purple00"/>
                         <constraints>
                             <constraint firstItem="7i1-jY-85u" firstAttribute="top" secondItem="wNN-aJ-Av4" secondAttribute="bottom" constant="24" id="4mb-wC-MfB"/>
                             <constraint firstItem="zwO-9v-dxh" firstAttribute="leading" secondItem="7i1-jY-85u" secondAttribute="leading" constant="200" id="8PN-w9-NfK"/>
@@ -83,4 +84,9 @@
             <point key="canvasLocation" x="189" y="-2"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="purple00">
+            <color red="0.26666666666666666" green="0.24705882352941178" blue="0.63921568627450975" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
