--- a/pppppp/View/SettingsView/ChangeProfileView/ChangeProfileView.storyboard
+++ b/pppppp/View/SettingsView/ChangeProfileView/ChangeProfileView.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Image references" minToolsVersion="12.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -77,7 +78,7 @@
                             </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="KNT-3O-IY0"/>
-                        <color key="backgroundColor" red="0.071201466020000007" green="0.0" blue="0.29860094190000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" name="mainColor"/>
                         <constraints>
                             <constraint firstItem="Zx9-rs-OpS" firstAttribute="leading" secondItem="KNT-3O-IY0" secondAttribute="leading" constant="24" id="906-U2-DYD"/>
                             <constraint firstItem="Zx9-rs-OpS" firstAttribute="top" secondItem="5xC-7x-6aS" secondAttribute="bottom" constant="16" id="Bff-sX-fY5"/>
@@ -107,5 +108,8 @@
     </scenes>
     <resources>
         <image name="camera.circle.fill" catalog="system" width="128" height="123"/>
+        <namedColor name="mainColor">
+            <color red="0.071000002324581146" green="0.0" blue="0.29800000786781311" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
